# haskell-lfsr

./: LFSR.cabal
src/Data/LFSR/: Bits.hs  Tap.hs  Tap2.hs  Tap4.hs
