
name:                LFSR
version:             0.1.0.0
synopsis:            Simple implementation of Linear Feedback Shift Register
description:         Simple implementation of Linear Feedback Shift Register
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
-- copyright:
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
                       Data.LFSR.Bits
                       Data.LFSR.Tap
                       Data.LFSR.Tap4
                       Data.LFSR.Tap2
  -- other-modules:
  build-depends:
                         base < 5
                       , array
  hs-source-dirs:      src


source-repository head
  type:     git
  location: https://github.com/khibino/haskell-lfsr

source-repository head
  type:     mercurial
  location: https://bitbucket.org/khibino/haskell-lfsr
